--- a/app/src/main/res/layout/fragment_report_income.xml
+++ b/app/src/main/res/layout/fragment_report_income.xml
@@ -1,102 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/scvIncome"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:background="@drawable/bg_report_4"
     android:orientation="vertical">
-
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/background_simple3"
-        android:descendantFocusability="blocksDescendants"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:gravity="center"
-            android:textColor="#DB392A"
-            android:text="@string/ts_income_max"
-            android:textAllCaps="true"
-            android:textSize="18sp" />
+        tools:ignore="UselessParent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="4dp"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
-            android:paddingEnd="25dp"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/imgIncomeMax"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                tools:ignore="ContentDescription" />
+            android:descendantFocusability="blocksDescendants"
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/txtIncomeMaxType"
-                android:textColor="#E91233"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="0dp"
-                android:layout_width="150dp"
-                android:textSize="18sp"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/txtIncomeMaxValue"
-                android:layout_gravity="center"
-                android:textSize="18sp"
-                android:gravity="end"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"  />
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:gravity="center"
+                android:textColor="#FFF176"
+                android:text="@string/ts_income_max"
+                android:textAllCaps="true"
+                android:textSize="18sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
+                android:paddingEnd="25dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imgIncomeMax"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    tools:ignore="ContentDescription" />
+
+                <TextView
+                    android:id="@+id/txtIncomeMaxType"
+                    android:textColor="#FFF176"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="0dp"
+                    android:layout_width="150dp"
+                    android:textSize="18sp"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/txtIncomeMaxValue"
+                    android:layout_gravity="center"
+                    android:textSize="18sp"
+                    android:gravity="end"
+                    android:textColor="#FFFFFF"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"  />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorbackground" />
+
+            <TextView
+                android:id="@+id/txtIncomeInfo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="5dp"
+                android:textAllCaps="true"
+                android:textColor="#64B5F6"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <com.razerdp.widget.animatedpieview.AnimatedPieView
+                android:id="@+id/pvIncome"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="5dp" />
+
+            <ExpandableListView
+                android:id="@+id/elvIncome"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:childDivider="#00000000"
+                android:dividerHeight="1dp"/>
+
         </LinearLayout>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/colorbackground" />
-
-        <TextView
-            android:id="@+id/txtIncomeInfo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="5dp"
-            android:textAllCaps="true"
-            android:textColor="#2B75F7"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-        <com.razerdp.widget.animatedpieview.AnimatedPieView
-            android:id="@+id/pvIncome"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="5dp" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/colorbackground" />
-
-        <ExpandableListView
-            android:id="@+id/elvIncome"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorReportListBackground"
-            android:childDivider="#00000000"
-            android:divider="@color/colorReportListBackground"
-            android:dividerHeight="1dp"/>
-
-    </LinearLayout>
-
-</ScrollView>
+    </ScrollView>
+</LinearLayout>
