--- a/app/src/main/res/layout/custom_report_expandlist_header.xml
+++ b/app/src/main/res/layout/custom_report_expandlist_header.xml
@@ -8,7 +8,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="@color/colorReportListBackground"/>
+        android:background="@android:color/transparent"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
