--- a/app/src/main/res/layout/hoang_make_economy.xml
+++ b/app/src/main/res/layout/hoang_make_economy.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
