--- a/app/src/main/res/layout/bill_activity_payment_form.xml
+++ b/app/src/main/res/layout/bill_activity_payment_form.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ListView
-        android:id="@+id/lvLoan"
         android:dividerHeight="5dp"
+        android:layout_marginTop="12dp"
+        android:id="@+id/lvPaymentForm"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorbackgroundBack"
-        android:divider="@color/colorbackgroundBack" />
+        android:divider="@color/colorbackgroundBack">
+
+    </ListView>
 </LinearLayout>
