--- a/app/src/main/res/layout/bill_fragment_pay.xml
+++ b/app/src/main/res/layout/bill_fragment_pay.xml
@@ -7,6 +7,9 @@
 
     <ListView
         android:id="@+id/lvPay"
+        android:dividerHeight="5dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="@color/colorbackgroundBack"
+        android:divider="@color/colorbackgroundBack" />
 </LinearLayout>
