--- a/app/src/main/res/layout/truong_activity_themsukien.xml
+++ b/app/src/main/res/layout/truong_activity_themsukien.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainSuKien.ActivityThemSuKien">
+    tools:context=".MainEvent.View.AddEventActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar2"
@@ -79,33 +79,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/imgDiadiem"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_marginLeft="32dp"
-            android:layout_marginTop="22dp"
-            android:src="@drawable/ic_currency" />
-
-        <EditText
-            android:id="@+id/editDonViTienTe"
-            style="@style/TextAppearance.AppCompat"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="32dp"
-            android:layout_marginTop="16dp"
-            android:ems="10"
-            android:focusable="false"
-            android:inputType="textPersonName"
-
-            android:text="Việt Nam Đồng" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingBottom="16dp">
 
@@ -115,10 +88,10 @@
             android:layout_height="32dp"
             android:layout_marginLeft="32dp"
             android:layout_marginTop="22dp"
-            android:src="@drawable/ic_bk_cashbook" />
+            android:src="@drawable/ic_truong_edit1" />
 
         <EditText
-            android:id="@+id/editChonVi"
+            android:id="@+id/editNote"
             style="@style/TextAppearance.AppCompat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -126,11 +99,37 @@
             android:layout_marginTop="16dp"
             android:layout_weight="1"
             android:ems="10"
-            android:focusable="false"
             android:inputType="textPersonName"
-            android:text="Tất cả các ví" />
+            android:hint="Ghi chú" />
 
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_gravity="center_vertical"
+            android:id="@+id/imgDiadiem"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginLeft="32dp"
+            android:src="@drawable/ic_currency" />
+
+        <EditText
+            android:id="@+id/editDonViTienTe"
+            style="@style/TextAppearance.AppCompat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="32dp"
+            android:ems="10"
+            android:focusable="false"
+            android:inputType="textPersonName"
+            android:text="Việt Nam Đồng" />
+    </LinearLayout>
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
