--- a/app/src/main/res/layout/truong_item_kehoach.xml
+++ b/app/src/main/res/layout/truong_item_kehoach.xml
@@ -32,33 +32,10 @@
                 android:layout_marginBottom="10dp"
                 android:textSize="20dp"
                 android:textStyle="bold" />
-
-            <LinearLayout
+            <TextView
+                android:id="@+id/txtNoteLV"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/textView4"
-                    android:layout_width="61dp"
-                    android:layout_height="wrap_content"
-                    android:text="Đã chi" />
-
-                <TextView
-                    android:id="@+id/txtSoTienDaChi"
-                    android:layout_width="47dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="right"
-                    android:text="0" />
-
-                <TextView
-                    android:id="@+id/textView6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
-                    android:text=" VNĐ" />
-            </LinearLayout>
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
 
