--- a/app/src/main/res/layout/activity_edit_thu_chi.xml
+++ b/app/src/main/res/layout/activity_edit_thu_chi.xml
@@ -178,17 +178,18 @@
 
                     <ImageView
                         android:id="@+id/imgPhuongThucTTEdit"
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
+                        android:layout_width="22dp"
+                        android:layout_height="22dp"
                         android:layout_gravity="center"
                         android:layout_marginLeft="20dp"
                         android:layout_marginRight="20dp"
                         android:onClick="xuLyChonPhuongThucEdit"
+                        android:scaleType="fitXY"
                         app:srcCompat="@drawable/wallet_picture" />
 
                     <EditText
                         android:id="@+id/edtPhuongThucTTEdit"
-                        android:layout_width="300dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:ems="10"
@@ -270,23 +271,26 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:onClick="xuLyChonSuKienEdit"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@color/colorbackgroundchonsukien"
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:id="@+id/imageView6"
-                        android:layout_width="30dp"
-                        android:layout_height="23dp"
+                        android:id="@+id/imgChonSuKienEdit"
+                        android:layout_width="22dp"
+                        android:layout_height="22dp"
                         android:layout_gravity="center"
                         android:layout_marginLeft="20dp"
                         android:layout_marginRight="20dp"
-                        android:layout_weight="1"
-                        android:scaleType="fitCenter"
+                        android:onClick="xuLyChonSuKienEdit"
+                        android:scaleType="fitXY"
                         app:srcCompat="@drawable/calendar_picture" />
 
                     <EditText
+                        android:onClick="xuLyChonSuKienEdit"
+                        android:focusable="false"
                         android:id="@+id/edtChonSuKien"
                         android:layout_width="300dp"
                         android:layout_height="wrap_content"
