--- a/app/src/main/res/layout/bill_activity_main.xml
+++ b/app/src/main/res/layout/bill_activity_main.xml
@@ -26,7 +26,7 @@
                 android:layout_height="?attr/actionBarSize"
                 style="@style/CustomTabLayout"
                 android:id="@+id/tabs"
-                android:layout_gravity="left"
+                android:layout_gravity="start"
                 android:background="@color/colorPrimary"
                 app:tabGravity="fill"
                 app:tabMode="fixed">
@@ -41,14 +41,14 @@
             android:background="@color/colorbackgroundListView"
             app:layout_anchor="@+id/appbar"
             app:layout_anchorGravity="bottom|center"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"></android.support.v4.view.ViewPager>
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fabAddBill"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center_horizontal"
-            android:layout_marginRight="16dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:src="@drawable/ic_add_white_24dp"
             app:backgroundTint="@color/colorFloatButton"
