--- a/app/src/main/res/layout/bill_custom_listview_applying.xml
+++ b/app/src/main/res/layout/bill_custom_listview_applying.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -9,29 +10,31 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        tools:ignore="UselessParent">
 
         <ImageView
-            android:layout_marginLeft="12dp"
+            android:layout_marginStart="12dp"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:id="@+id/imgIcApplying"/>
+            android:id="@+id/imgIcApplying"
+            android:contentDescription="@string/bill_symbol" />
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
-                android:layout_marginLeft="12dp"
+                android:layout_marginStart="12dp"
                 android:textColor="@android:color/black"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:id="@+id/txtNameBill"
                 android:layout_width="wrap_content"
                 android:layout_height="32dp" />
 
             <TextView
                 android:layout_marginTop="6dp"
-                android:layout_marginLeft="12dp"
+                android:layout_marginStart="12dp"
                 android:id="@+id/txtText1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
@@ -41,7 +44,7 @@
                 android:background="@drawable/bill_custom_txtpay"
                 android:gravity="center_vertical"
                 android:textColor="@android:color/white"
-                android:layout_marginLeft="12dp"
+                android:layout_marginStart="12dp"
                 android:layout_marginTop="12dp"
                 android:id="@+id/btnPay"
                 android:layout_width="wrap_content"
