--- a/app/src/main/res/layout/bill_fragment_applying.xml
+++ b/app/src/main/res/layout/bill_fragment_applying.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorLayoutTaskbar"
@@ -15,10 +16,10 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
-            android:text="Các hóa đơn còn lại"
+            android:layout_marginStart="12dp"
+            android:text="@string/bill_remain"
             android:textColor="@android:color/black"
-            android:textSize="20dp" />
+            android:textSize="20sp" />
 
         <View
             android:layout_width="match_parent"
@@ -36,21 +37,22 @@
 
             <TextView
                 android:layout_marginTop="4dp"
-                android:textSize="15dp"
+                android:textSize="15sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="12dp"
-                android:text="SỐ DƯ" />
+                android:layout_marginStart="12dp"
+                android:text="@string/bill_about" />
 
             <TextView
-                android:textSize="15dp"
+                android:textSize="15sp"
                 android:id="@+id/txtMoneyTotal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="12dp"
-                android:text="0"
-                android:textColor="@android:color/holo_blue_dark" />
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="12dp"
+                android:text="@string/bill_0"
+                android:textColor="@android:color/holo_blue_dark"
+                tools:ignore="RelativeOverlap" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -62,21 +64,23 @@
 
             <TextView
                 android:layout_marginTop="4dp"
-                android:textSize="15dp"
+                android:textSize="15sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="12dp"
-                android:text="KÌ NÀY" />
+                android:layout_marginStart="12dp"
+                android:textAllCaps="true"
+                android:text="@string/bill_this_term" />
 
             <TextView
-                android:textSize="15dp"
+                android:textSize="15sp"
                 android:id="@+id/txtMoneyFuture"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="12dp"
-                android:text="0"
-                android:textColor="@android:color/holo_red_dark" />
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="12dp"
+                android:text="@string/bill_0"
+                android:textColor="@android:color/holo_red_dark"
+                tools:ignore="RelativeOverlap" />
         </RelativeLayout>
     </LinearLayout>
 
@@ -90,10 +94,10 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
-            android:text="Kì này"
+            android:layout_marginStart="12dp"
+            android:text="@string/bill_this_term"
             android:textColor="@android:color/black"
-            android:textSize="20dp" />
+            android:textSize="20sp" />
 
         <View
             android:layout_width="match_parent"
