--- a/app/src/main/res/layout/bill_fragment_ended.xml
+++ b/app/src/main/res/layout/bill_fragment_ended.xml
@@ -16,10 +16,10 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
-            android:text="Các hóa đơn đã thanh toán"
+            android:layout_marginStart="12dp"
+            android:text="@string/bill_payed"
             android:textColor="@android:color/black"
-            android:textSize="20dp" />
+            android:textSize="20sp" />
 
         <View
             android:layout_width="match_parent"
